# Frechet-CUDA

./: CMakeLists.txt  Makefile  README.md
data/: download_data.sh
include/: clustering.hpp  curve.hpp  frechet.hpp  geometry_basics.hpp  intersection_algorithm_in_parallel.hpp  jl_transform.hpp  random.hpp
py/: setup.py  test.py
src/: compute_distance_wrapper.cpp  curve.cpp  frechet.cpp  geometry_basics.cpp  intersection_algorithm_in_parallel.cu
